--- a/scss/_diamonds.scss
+++ b/scss/_diamonds.scss
@@ -11,7 +11,6 @@ $diamond-left: 10vw;
     background-color: $diamond-color;
     top: $top * ($diamond-size + $diamond-spacing);
     left: $left * ($diamond-size + $diamond-spacing);
-    z-index: -200;
 }
 
 .diamonds {
@@ -20,7 +19,6 @@ $diamond-left: 10vw;
     left: $diamond-left;
     transform: rotate(45deg);
     transform-origin: 0;
-    z-index: -200;
 }
 
 .background {
@@ -28,6 +26,7 @@ $diamond-left: 10vw;
     width: 100vw;
     height: 100%;
     overflow: hidden;
+    z-index: -200;
 }
 
 $list: 0, 1, 2, 3, 4, 5, 6, 7;
